# github-actions-sample

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.multistage  LICENSE  README.md  pyproject.toml
.github/workflows/: actions.yml
src/app/: __init__.py  views.py
src/app/static/css/: index.css
src/app/templates/: base.html  index.html
src/tests/: __init__.py  test_hello.py
